ch04/install/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argo-ui
  namespace: kubeflow
spec:
  gateways:
    - kubeflow-gateway
  hosts:
    - '*'
  http:
    - match:
        - uri:
            prefix: /argo/
      rewrite:
        uri: /
      route:
        - destination:
            host: argo-ui.kubeflow.svc.cluster.local
            port:
              number: 80
